--- a/package.json
+++ b/package.json
@@ -1,58 +1,38 @@
 {
-  "name": "chrome-react-ts-extension-starter",
-  "author": "Dheeraj",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "reactDev": "PORT=3007 react-scripts start",
-    "buildDev": "npm run clean && webpack --progress --config webpack.dev.js",
-    "buildProd": "npm run clean && webpack --progress --config webpack.prod.js",
-    "buildDev:watch": "webpack --watch --progress --config webpack.dev.js",
-    "clean": "rimraf dist && rimraf extension-build.zip",
-    "pack": "cd dist && bestzip ../extension-build.zip *",
-    "packWithNode": "node zipDist.js"
-  },
-  "devDependencies": {
-    "@types/chrome": "^0.0.188",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.4",
-    "archiver": "^7.0.1",
-    "bestzip": "^2.2.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "css-loader": "^6.7.1",
-    "fs-extra": "^11.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "npm-run-all": "^4.1.5",
-    "postcss-loader": "^7.0.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "rimraf": "^2.7.1",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.6.4",
-    "webpack": "^5.72.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0",
-    "react-scripts": "5.0.1"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.4.7",
-    "postcss": "^8.4.14",
-    "react-router-dom": "6.2",
-    "tailwindcss": "^3.0.24"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "foo-extension",
+	"displayName": "Foo Extension",
+	"version": "1.0.0",
+	"author": "dheerusuthar@gmail.com",
+	"description": "",
+	"type": "module",
+	"license": "MIT",
+	"keywords": [
+		"foo-extension"
+	],
+	"engines": {
+		"node": ">=14.18.0"
+	},
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "vite preview",
+		"fmt": "prettier --write '**/*.{tsx,ts,json,css,scss,md}'",
+		"zip": "npm run build && node src/zip.js"
+	},
+	"dependencies": {
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@crxjs/vite-plugin": "^2.0.0-beta.19",
+		"@types/chrome": "^0.0.268",
+		"@types/react": "^18.2.28",
+		"@types/react-dom": "^18.2.13",
+		"@vitejs/plugin-react": "^4.1.0",
+		"gulp": "^4.0.2",
+		"gulp-zip": "^6.0.0",
+		"prettier": "^3.0.3",
+		"typescript": "^5.2.2",
+		"vite": "^4.4.11"
+	}
 }
