--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,21 @@
- {
-     "compilerOptions": {
-         "jsx": "react",
-         "module": "es6",
-         "target": "es6",
-         "moduleResolution": "node",
-         "esModuleInterop": true,
-     },
-     "include": ["src/**/*.ts", "src/**/*.tsx"],
-     "exclude": ["node_modules"],
- }
+{
+  "compilerOptions": {
+    "target": "ESNext",
+    "useDefineForClassFields": true,
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx"
+  },
+  "include": ["src"],
+  "references": [{ "path": "./tsconfig.node.json" }]
+}
