--- a/package.json
+++ b/package.json
@@ -20,8 +20,17 @@
 		"zip": "npm run build && node src/zip.js"
 	},
 	"dependencies": {
+		"@radix-ui/react-slot": "^1.1.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
+		"firebase": "^10.12.3",
+		"lucide-react": "^0.408.0",
+		"path": "^0.12.7",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"react-firebase-hooks": "^5.1.1",
+		"tailwind-merge": "^2.4.0",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@crxjs/vite-plugin": "^2.0.0-beta.19",
@@ -29,9 +38,12 @@
 		"@types/react": "^18.2.28",
 		"@types/react-dom": "^18.2.13",
 		"@vitejs/plugin-react": "^4.1.0",
+		"autoprefixer": "^10.4.19",
 		"gulp": "^4.0.2",
 		"gulp-zip": "^6.0.0",
+		"postcss": "^8.4.39",
 		"prettier": "^3.0.3",
+		"tailwindcss": "^3.4.4",
 		"typescript": "^5.2.2",
 		"vite": "^4.4.11"
 	}
